@@ -437,8 +437,10 @@ class OutputPage extends ContextSource {
 	 * Get all registered JS and CSS tags for the header.
 	 *
 	 * @return String
+	 * @deprecated since 1.22 Use OutputPage::headElement to build the full header.
 	 */
 	function getScript() {
+		wfDeprecated( __METHOD__, '1.22' );
 		return $this->mScripts . $this->getHeadItems();
 	}
 
@@ -592,8 +594,11 @@ class OutputPage extends ContextSource {
 	 * Get all header items in a string
 	 *
 	 * @return String
+	 * @deprecated since 1.22 Use OutputPage::headElement or
+	 *     if absolutely necessary use OutputPage::getHeadItemsArray.
 	 */
 	function getHeadItems() {
+		wfDeprecated( __METHOD__, '1.22' );
 		$s = '';
 		foreach ( $this->mHeadItems as $item ) {
 			$s .= $item;
@@ -2535,12 +2540,15 @@ $templates
 
 		$ret .= Html::element( 'title', null, $this->getHTMLTitle() ) . "\n";
 
-		$ret .= implode( "\n", array(
-			$this->getHeadLinks(),
-			$this->buildCssLinks(),
-			$this->getHeadScripts(),
-			$this->getHeadItems()
-		) );
+		foreach ( $this->getHeadLinksArray() as $item ) {
+			$ret .= $item . "\n";
+		}
+		$ret .= $this->buildCssLinks() . "\n";
+		$ret .= $this->getHeadScripts() . "\n";
+
+		foreach ( $this->mHeadItems as $item ) {
+			$ret .= $item . "\n";
+		}
 
 		$closeHead = Html::closeElement( 'head' );
 		if ( $closeHead ) {
@@ -3343,8 +3351,10 @@ $templates
 
 	/**
 	 * @return string HTML tag links to be put in the header.
+	 * @deprecated since 1.22 Use OutputPage::headElement or if you have to, OutputPage::getHeadLinksArray directly.
 	 */
 	public function getHeadLinks() {
+		wfDeprecated( __METHOD__, '1.22' );
 		return implode( "\n", $this->getHeadLinksArray() );
 	}
 
